poc-nextjs-f2m-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-nextjs-f2m-deployment
  namespace: pocs
spec:
  selector:
    matchLabels:
      app: poc-nextjs-f2m-app
  template:
    metadata:
      labels:
        app: poc-nextjs-f2m-app
    spec:
      containers:
      - name: poc-nextjs-f2m-mysql
        image: mysql:5
      - name: poc-nextjs-f2m-web
        image: registry.softdesign-rs.com.br/poc/nextjs-f2m-web:master
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      - name: poc-nextjs-f2m-api
        image: registry.softdesign-rs.com.br/poc/nextjs-f2m-api:master
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
