poc-nextjs-f2m-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: poc-nextjs-f2m-service-np
  namespace: pocs
spec:
  selector:
    app: poc-nextjs-f2m-app
  type: NodePort 
  ports:
  - name: app
    port: 3000
  - name: api
    port: 3001
  - name: banco
    port: 3306
